# audioFeatureExtraction

./: CMakeLists.txt  test.py
audio_metrics/: audio_read.cpp  audio_read_with_pybind11.cpp  wave_player.h
python_scripts/: audio_read.py
src/: wav_player.cpp  wav_player_pybind.cpp
test_scripts/: hello_world
